--- a/Application.Module/View/Main/MainView.xaml
+++ b/Application.Module/View/Main/MainView.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock"
              mc:Ignorable="d">
-    <Grid />
+
+    <xcad:DockingManager AllowMixedOrientation="True" BorderBrush="Black" BorderThickness="1" />
+
 </UserControl>
